Hopefully fix alignment of buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,9 @@ header {
 
 /* Contact div styling */
 #contacts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-bottom: 2em; }
   @media only screen and (min-width: 48em) {
     #contacts {
@@ -199,10 +202,7 @@ header {
       width: 10em;
       top: 0px;
       left: 0px;
-      position: fixed;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      position: fixed; }
       #contacts .col {
         align-self: center; } }
   #contacts a.contact-circle {
